# sahara-extra

./: .gitignore  .gitreview  .zuul.yaml  AUTHORS  CONTRIBUTING.rst  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
edp-adapt-for-oozie/: README.rst  pom.xml
edp-adapt-for-oozie/src/main/java/org/openstack/sahara/edp/: MainWrapper.java
edp-adapt-for-spark/: README.rst  pom.xml
edp-adapt-for-spark/src/main/java/org/openstack/sahara/edp/: SparkWrapper.java
edp-examples/: README.rst
edp-examples/edp-wordcount/: README.rst
edp-examples/edp-wordcount/src/: WordCount.java
edp-examples/edp-wordcount/wordcount/: workflow.xml
edp-examples/pig-job/: README.rst
elements/hadoop/install.d/: 80-setup-hadoop
hadoop-swiftfs/: README.rst  checkstyle.xml  pom.xml
hadoop-swiftfs/src/main/java/org/apache/hadoop/fs/swift/: package.html
hadoop-swiftfs/src/main/java/org/apache/hadoop/fs/swift/auth/: ApiKeyAuthenticationRequest.java  AuthenticationRequestV2.java  AuthenticationRequestV3.java  AuthenticationResponseV3.java  AuthenticationWrapperV3.java  KeyStoneAuthRequest.java  PasswordAuthenticationRequest.java  PasswordCredentialsV3.java  (+3 more)
hadoop-swiftfs/src/site/apt/: index.apt.vm
hadoop-swiftfs/src/test/java/org/apache/hadoop/fs/swift/: TestSwiftConfig.java  TestSwiftFileSystemBasicOps.java  TestSwiftFileSystemDelete.java  TestSwiftFileSystemDirectories.java  TestSwiftFileSystemLsOperations.java  TestSwiftFileSystemPartitionedUploads.java  TestSwiftFileSystemRename.java  TestUtils.java
playbooks/build-artifacts/: post.yaml  run.yaml
tools/: README.rst  build-all-artifacts.sh  build-hadoop-openstack.sh  build-oozie.sh  generate-patched-hadoop-aws.sh  oozie_core.patch  oozie_webUI.patch  path-style-access.patch
(+14 files in other folders)
