[metadata]
name = sahara-extra
version = 4.0.0
summary = Extras for Sahara: hadoop-swiftfs
description-file = README.rst
license = Apache Software License
classifiers =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://sahara.readthedocs.org

[files]
data_files =
    share/sahara-elements = elements/*

[global]
setup-hooks = pbr.hooks.setup_hook

[wheel]
universal = 1
