[metadata]
name = sahara-extra
summary = Extras for Sahara: hadoop-swiftfs
description-file = README.rst
license = Apache Software License
classifiers =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/sahara/

[global]
setup-hooks = pbr.hooks.setup_hook

[wheel]
universal = 1
