[metadata]
name = sahara-extra
summary = Extras for Sahara: hadoop-swiftfs
description-file = README.rst
license = Apache Software License
python-requires = >=3.6
classifiers =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/sahara/latest/
